<resources>
    <string name="app_name">Smart Home</string>

    <string name="value_on">ON</string>
    <string name="value_off">OFF</string>

    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="description_login">sign into \nmange your device and accessory</string>
    <string name="register">Register</string>

    <string name="confirm_exit_app">Press again to exit</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_now">Register now</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="empty_login_information">Enter your email and password to login</string>
    <string name="empty_register_information">Enter your information to login</string>
    <string name="invalid_login">Wrong email or password. Please check again</string>
    <string name="equal_password">Confirm password and password must be equal</string>
    <string name="register_success">Register successfully. Please login to continue.</string>

    <!-- Room detail -->
    <string name="row1_top_detail_room">Active</string>
    <string name="row2_top_detail_room">Inactive</string>
    <string name="row3_top_detail_room">Usage</string>
    <string name="turn_off_all_devices">Turn off all devices</string>
    <string name="number_in_detail_room">5</string>
    <string name="number_WKh_detail_room">230 KWh</string>
    <string name="voltage">Voltage</string>
    <string name="voltage_value">220V</string>

    <!-- Preference Titles -->
    <string name="notification_header">Notification</string>
    <string name="sound_header">Sound</string>

    <!-- Notification Preferences -->
    <string name="notification_title">Notification?</string>
    <string name="notification_on">Automatically receive notification</string>
    <string name="notification_off">Notification not allowed</string>
    <string name="option_title">How often?</string>

    <!-- Sound Preferences -->
    <string name="sound_title">Allow sound?</string>
    <string name="attachment_title">Sound volume</string>
    <string name="error_email_invalid">Invalid email</string>
    <string name="error_password_invalid">Invalid password</string>
    <string name="error_name_invalid">Invalid name</string>

    <!-- String Format -->
    <string name="format_humidity">%.1f %%</string>
    <string name="format_temperature">%.1f oC</string>
    <string name="logout">Logout</string>

    <!--    fragment add new device-->
    <string name="name_device">Device name </string>
    <string name="name_room">Room</string>
    <string name="btn_add">Add New Device</string>
</resources>
