<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_notification"
        app:title="@string/notification_header">

        <SwitchPreferenceCompat
            app:key="notification"
            app:summaryOff="@string/notification_off"
            app:summaryOn="@string/notification_on"
            app:title="@string/notification_title" />

        <ListPreference
            app:defaultValue="reply"
            app:dependency="notification"
            app:entries="@array/notification_entries"
            app:entryValues="@array/notification_values"
            app:key="option"
            app:title="@string/option_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_sound"
        app:title="@string/sound_header">

        <SwitchPreferenceCompat
            app:key="sound"
            app:title="@string/sound_title" />

        <SeekBarPreference
            app:dependency="sound"
            app:key="volume"
            app:showSeekBarValue="true"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>