<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="com.example.smarthomeapp.presentation.device.contract.DeviceContract.ViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/view_toolbar"
            layout="@layout/layout_toolbar"
            app:iconLeft="@{@drawable/ic_back}"
            app:layout_constraintTop_toTopOf="parent"
            app:onLeftClick="@{_->vm.onBack()}"
            app:title="@{vm.room.name}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_xxxlarge"
            android:layout_marginTop="@dimen/dimen_xxxlarge"
            android:hint="@string/name_room"
            app:boxStrokeColor="@color/color_outline_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/view_toolbar">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_room"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:text="@{vm.room.name}"
                android:enabled="false"
                android:padding="@dimen/dimen_xxmedium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spn_device_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/TypeDevice"
            android:selectedItemPosition="@={vm.deviceType}"
            android:layout_marginTop="@dimen/dimen_common"
            android:layout_marginBottom="@dimen/dimen_common"
            android:layout_marginHorizontal="@dimen/dimen_xxxlarge"
            android:padding="@dimen/dimen_xxmedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_room" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_xxxlarge"
            android:layout_marginTop="@dimen/dimen_medium"
            android:hint="@string/name_device"
            app:boxStrokeColor="@color/color_outline_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/spn_device_type">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_name_device"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:text="@={vm.deviceName}"
                android:padding="@dimen/dimen_xxmedium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add"
            style="@style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_xxxlarge"
            android:layout_marginTop="@dimen/dimen_xxxlarge"
            android:background="@drawable/bgr_round"
            android:text="@string/btn_add"
            android:textColor="@color/black"
            android:textSize="@dimen/font_xxmedium"
            android:textStyle="bold"
            android:onClick="@{_->vm.addDevice()}"
            app:layout_constraintTop_toBottomOf="@id/til_name_device" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
